do a good navbar

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,7 +20,10 @@
                         <img class="group-car-image" src="{{ asset('/img/cars/carhomebanner.png') }}" alt="">
                     </div>
                     <div>
-                        <div class="rq-search-container search-bar-container-bg" style="background: #f3f3f3">
+                        <div class="rq-title-container text-center">
+                            <h2 class="rq-title no-padding">Search your <strong>Dream Car.</strong></h2>
+                        </div>
+                        <div class="rq-login-form" style="background: #f3f3f3">
                             {% include '/_includes/_searchbar.html.twig' %}
                         </div> <!-- / .search-container -->
                     </div>
