--- a/templates/listofcars.html.twig
+++ b/templates/listofcars.html.twig
@@ -21,7 +21,7 @@
                 <div class="container">
                     <div class="listing-search-container">
                         <h2>Search For<span class="dot">.</span></h2>
-                        <div class="rq-search-container d-flex">
+                        <div class="rq-login-form">
                             {% include '/_includes/_searchbar.html.twig' %}
                         </div>
 
