--- a/templates/_includes/_searchbar.html.twig
+++ b/templates/_includes/_searchbar.html.twig
@@ -1,10 +1,10 @@
 {{ form_start(form) }}
 <div class="row">
-    <div class="col-md-6">
-        {{ form_widget(form.search, { attr : { class : 'rq-form-control'}}, { label_attr : { class : 'd-none'}}) }}
+    <div class="col-md-8">
+        {{ form_widget(form.search, { attr : { class : 'rq-form-control rounded'}}, { label_attr : { class : 'd-none'}}) }}
     </div>
-    <div class="col-md-6 ">
-        <button type="submit" class="rq-form-control rounded">Submit</button>
+    <div class="col-md-4">
+        <button type="submit" class="rq-btn rq-btn-primary rq-form-control rounded">Submit</button>
     </div>
 </div>
 {{ form_end(form) }}
