--- a/templates/car-details.html.twig
+++ b/templates/car-details.html.twig
@@ -14,24 +14,21 @@
 
         <div class="rq-page-content"> <!-- start of page content -->
             <div class="rq-listing-details">
-                <div class="rq-listing-single"> <!-- start of banner slider -->
-                    <div class="rq-listing-gallery-post">
-                        <div class="rq-gallery-content">
-                            <div class="details-slider owl-carousel">
-                                <div class="item">
-                                    <img src="img/listing-detail2.png" alt="">
-                                </div>
-                                <div class="item">
-                                    <img src="img/listing-detail.png" alt="">
-                                </div>
-                                <div class="item">
-                                    <img src="img/listing-detail2.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> <!-- end of banner slider -->
+{#                <div class="rq-listing-single"> <!-- start of banner slider -->#}
+{#                    <div class="rq-listing-gallery-post">#}
+{#                        <div class="rq-gallery-content">#}
+{#                            <div class="details-slider owl-carousel">#}
+{#                                <div class="item">#}
+{#                                    <img src="{{ asset('picture/vehicle-1.jpeg') }}" alt="">#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div> <!-- end of banner slider -->#}
                 <div class="rq-content-block">
+                    <div class="w-75 mx-auto">
+                        <img src="{{ asset('picture/vehicle-1.jpeg') }}" alt="" class="mb-5">
+                    </div>
                     <div class="container">
                         <div class="rq-title-container bredcrumb-title text-center"> <!-- start of breadcrumb -->
                             <h1 class="rq-title light">Car Details</h1>
