--- a/templates/checkout.html.twig
+++ b/templates/checkout.html.twig
@@ -4,173 +4,66 @@
 
 {% block body %}
 
-<div id="fakeloader">
-      <div class="spinner5">
-        <div class="cube1"></div>
-        <div class="cube2"></div>
-      </div>
+    <div id="fakeloader">
+        <div class="spinner5">
+            <div class="cube1"></div>
+            <div class="cube2"></div>
+        </div>
     </div>
-  <div id="main-wrapper">
-  <div class="rq-page-content">
-    <div class="rq-content-block">
-      <div class="container">
-        <div class="rq-title-container bredcrumb-title small">
-          <h2 class="rq-title">Checkout</h2>
-          <ol class="breadcrumb rq-subtitle">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shopping Cart</a></li>
-            <li class="active">Checkout</li>
-          </ol>
-        </div> <!-- end .rq-title-container -->
-        <div class="rq-checkout-wrapper">
-          <div class="container">
-            <div class="row">
-              <div class="panel-group" id="checkout-accordion" role="tablist" aria-multiselectable="true">
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="checkout-method-heading">
-                    <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#checkout-accordion" href="#checkout-method" aria-expanded="true" aria-controls="checkout-method">
-                        01. Checkout Method
-                      </a>
-                    </h4>
-                  </div> <!-- end .panel-heading -->
-                  <div id="checkout-method" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="checkout-method-heading">
-                    <div class="panel-body">
-                      <div class="row">
-                        <div class="col-md-6">
-                          <div class="panel-subtitle">
-                            <h5>Check as a guest or register</h5>
-                            <p>Register with us for future convenience:</p>
-                          </div>
-                          <div class="rq-radiobox-content">
-                                <span class="rq-radiobox">
-                                  <input type="radio" name="checkout-login-method" id="checkout-login-method" value="guest" checked>
-                                  <label for="checkout-login-method">Check as guest</label>
-                                </span>
-                            <span class="rq-radiobox">
-                                  <input checked type="radio" name="checkout-login-method" id="checkout-login-method-two" value="guest">
-                                  <label for="checkout-login-method-two">Register</label>
-                                </span>
-                          </div>
-                          <div class="panel-subtitle">
-                            <h5>Register and save time !</h5>
-                            <p>Register with us for future convenience:</p>
-                          </div>
+    <div id="main-wrapper">
+        <div class="rq-page-content">
+            <div class="rq-content-block">
+                <div class="container">
+                    <div class="rq-title-container bredcrumb-title small">
+                        <h2 class="rq-title">Checkout</h2>
+                        <ol class="breadcrumb rq-subtitle">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Shopping Cart</a></li>
+                            <li class="active">Checkout</li>
+                        </ol>
+                    </div> <!-- end .rq-title-container -->
 
-                          <div class="widget-categories">
-                            <ul>
-                              <li>Fast and easy check out</li>
-                              <li>Easy access to your order history and status</li>
-                            </ul>
-                          </div>
-                          <div class="guest-btn">
-                            <button class="rq-btn rq-btn-transparent">Continue</button>
-                          </div>
-                        </div> <!-- end .col-md-6 -->
-                        <div class="col-md-6">
-                          <div class="panel-subtitle">
-                            <h5>Already Registered ?</h5>
-                            <p>Please login below :</p>
-                          </div>
-                          <form action="#" class="rq-checkout-form">
-                            <div class="form-group">
-                              <label for="login-email">Email Address <span class="required">*</span></label>
-                              <input type="email" class="rq-form-control small" id="login-email" placeholder="Email">
+                    <div class="rq-contact-us-form-content"> <!-- start message form -->
+                        <img src="" alt="">
+                        <h3>{{ vehicle.vehicleBrand }} {{ vehicle.vehicleModel }}</h3>
+                        <h5>Fuel type: {{ vehicle.vehicleFuelType }}</h5>
+                        <h5>Class: {{ vehicle.vehicleType }}</h5>
+                        <h5>Transmission: {{ vehicle.vehicleGearBoxType }}</h5>
+                        <h5>door count: {{ vehicle.vehicleDoorCount }}</h5>
+                        <h5>Agency: {{ vehicle.company.name }}</h5>
+                        <h3 class="font-size-4">Agency location: {{ vehicle.company.agencyLocation }}</h3>
+                        <h3 class="font-size-4">price: <span class="text-danger">{{ vehicle.price }}</span> / day</h3>
+                        <div>
+{#                            {% for error in errors %}#}
+{#                                <li>{{ error }}</li>#}
+{#                            {% endfor %}#}
+                        </div>
+                        <form action="#" method="post">
+                            <h4>Please choose the pickup date</h4>
+                            <input type="datetime-local" name="startDate" class="contact-form-input" placeholder="start location date">
+                            <h4>... the dropoff date</h4>
+                            <input type="datetime-local" name="endDate" class="contact-form-input" placeholder="end location date">
+                            <h4>... and the dropoff Location</h4>
+                            <div class="m-2">
+                                <select name="endLocation" id="endLocation">
+                                    <option class="" value="">Select a drop off location</option>
+                                    {% for company in companies %}
+                                        <option value="{{ company.agencyLocation }}" name="endLocation"><strong>{{ company.name }}</strong> {{ company.agencyLocation }}</option>
+                                    {% endfor %}
+                                </select>
                             </div>
-                            <div class="form-group">
-                              <label for="login-password">Password <span class="required">*</span></label>
-                              <input type="password" class="rq-form-control small" id="login-password" placeholder="Password">
+                            <div class="submit-btn">
+                                <button type="submit" class="rq-btn rq-btn-primary">Make the reservation</button>
                             </div>
-                            <span class="required">* Required Fields</span>
-                            <div class="login-button">
-                              <a href="#">Forgot Your Password ?</a>
-                              <button type="submit" class="rq-btn rq-btn-primary btn-large">Log In</button>
-                            </div>
-                          </form>
-                        </div> <!-- end .col-md-6 -->
-                      </div>
-                    </div> <!-- end .panel-body -->
-                  </div> <!-- end .panel-collapse -->
-                </div> <!-- end .panel-default -->
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="billing-information-heading">
-                    <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#checkout-accordion" href="#billing-information" aria-expanded="true" aria-controls="billing-information">
-                        02. Billing Information
-                      </a>
-                    </h4>
-                  </div> <!-- end .panel-heading -->
-                  <div id="billing-information" class="panel-collapse collapse" role="tabpanel" aria-labelledby="billing-information-heading">
-                    <div class="panel-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute
-                    </div> <!-- end .panel-body -->
-                  </div> <!-- end .panel-collapse -->
-                </div> <!-- end .panel-default -->
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="shipping-information-heading">
-                    <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#checkout-accordion" href="#shipping-information" aria-expanded="true" aria-controls="shipping-information">
-                        03. Shipping Information
-                      </a>
-                    </h4>
-                  </div> <!-- end .panel-heading -->
-                  <div id="shipping-information" class="panel-collapse collapse" role="tabpanel" aria-labelledby="shipping-information-heading">
-                    <div class="panel-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute
-                    </div> <!-- end .panel-body -->
-                  </div> <!-- end .panel-collapse -->
-                </div> <!-- end .panel-default -->
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="shipping-method-heading">
-                    <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#checkout-accordion" href="#shipping-method" aria-expanded="true" aria-controls="shipping-method">
-                        04. Shipping Method
-                      </a>
-                    </h4>
-                  </div> <!-- end .panel-heading -->
-                  <div id="shipping-method" class="panel-collapse collapse" role="tabpanel" aria-labelledby="shipping-method-heading">
-                    <div class="panel-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute
-                    </div> <!-- end .panel-body -->
-                  </div> <!-- end .panel-collapse -->
-                </div> <!-- end .panel-default -->
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="payment-information-heading">
-                    <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#checkout-accordion" href="#payment-information" aria-expanded="true" aria-controls="payment-information">
-                        05. Payment Information
-                      </a>
-                    </h4>
-                  </div> <!-- end .panel-heading -->
-                  <div id="payment-information" class="panel-collapse collapse" role="tabpanel" aria-labelledby="payment-information-heading">
-                    <div class="panel-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute
-                    </div> <!-- end .panel-body -->
-                  </div> <!-- end .panel-collapse -->
-                </div> <!-- end .panel-default -->
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="order-review-heading">
-                    <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#checkout-accordion" href="#order-review" aria-expanded="true" aria-controls="order-review">
-                        06. Order Review
-                      </a>
-                    </h4>
-                  </div> <!-- end .panel-heading -->
-                  <div id="order-review" class="panel-collapse collapse" role="tabpanel" aria-labelledby="order-review-heading">
-                    <div class="panel-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute
-                    </div> <!-- end .panel-body -->
-                  </div> <!-- end .panel-collapse -->
-                </div> <!-- end .panel-default -->
-              </div> <!-- end #accordion -->
-            </div> <!-- end .row -->
-          </div> <!-- end .container -->
-        </div> <!-- end .rq-element-wrapper -->
-      </div> <!-- end .container -->
-    </div> <!-- end .rq-content-block -->
-  </div> <!-- end .rq-page-content -->
+                        </form>
+                    </div> <!-- end message form -->
 
-  <script src="{{ asset('js/jquery.min.js') }}"></script>
-<script src="{{ asset('js/scripts.js') }}" ></script>
+                </div> <!-- end .rq-element-wrapper -->
+            </div> <!-- end .container -->
+        </div> <!-- end .rq-content-block -->
+    </div> <!-- end .rq-page-content -->
+
+    <script src="{{ asset('js/jquery.min.js') }}"></script>
+    <script src="{{ asset('js/scripts.js') }}"></script>
 
 {% endblock %}
